--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@heroicons/react": "^2.2.0",
     "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.11.0",
     "axios": "^1.6.2",
@@ -29,7 +30,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.1.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sharp": "^0.33.5",
